--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.8.0",
     "simple-zustand-devtools": "^1.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
