--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.368.0",
     "ms": "^2.1.3",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
     "simple-zustand-devtools": "^1.1.0",
