--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "simple-zustand-devtools": "^1.1.0",
     "tailwind-merge": "^2.2.2",
