--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
     "simple-zustand-devtools": "^1.1.0",
@@ -28,6 +29,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@iconify/tailwind": "^0.1.4",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
