--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@iconify/tailwind": "^0.1.4",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.12.7",
